fix(module): real ModuleFinder.ofSystem find/open/list (bug 08)
TestImportHandlerStandardPackages NPE'd because ModuleFinder.ofSystem() was a
synthetic stub whose SystemModuleFinder had a null nameToModule field, so
find("java.base").get() NPE'd. The genuine path could not simply be unstubbed:
the fast path (SystemModulesMap.allSystemModules()) returns null because CratonVM
boots java.base from jmods (the jlink-generated SystemModules$* classes live only
in the linked lib/modules jimage), and the slow ofModuleInfos() path eagerly
memory-maps the ~140MiB image (OOMs the 256MiB default heap) and needs an unwired
JavaLangModuleAccess.

Replace the stub with a lazy finder:
- native-builtins/src/lib.rs: findAll() stays cheap/empty (no Spring regression,
  no eager image read); find(name) returns a ModuleReference whose open() builds a
  real SystemModuleReader on demand (ModuleReferenceImpl.open delegates to a
  non-null readerSupplier, else builds the system reader from descriptor.name).
  The image is read only when module contents are actually traversed.
- native-io/src/lib.rs: implement jdk/internal/jimage/NativeImageBuffer.getNativeMap
  in the always-on register_io_natives, returning the run-time image as a real heap
  ByteBuffer (CratonVM reads getInt/asIntBuffer/slice correctly from heap buffers).
- vm/src/vm/vm_init.rs: publish sun.arch.data.model (HotSpot parity, from pointer
  width) so BasicImageReader computes IS_64_BIT/MAP_ALL=true and uses the
  whole-image map instead of opening a FileChannel (which hit a missing
  WindowsNativeDispatcher native).

Verified: TestImportHandlerStandardPackages OK(1 test);
ofSystem().find("java.base").open().list() yields 976 java/lang classes == HotSpot;
findAll()=0 (unchanged vs prior stub -> Spring unaffected); no regressions.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>